feat: add `getProductById()` and `createProduct()`

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=springboot-mall-api
+spring.datasource.url=jdbc:postgresql://localhost:5432/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8
+spring.datasource.username=postgres
+spring.datasource.password=chun015
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=com.fasterxml.jackson.databind.util.ISO8601DateFormat
