--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.password=chun015
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jackson.time-zone=GMT+8
-spring.jackson.date-format=com.fasterxml.jackson.databind.util.ISO8601DateFormat
+spring.jackson.date-format=com.fasterxml.jackson.databind.util.StdDateFormat
